move style properties

--- a/hello.html
+++ b/hello.html
@@ -6,13 +6,17 @@ ECHO is on.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <style>
+        h1{
+            color:blue;
+        }
+    </style>
 </head>
 <body>
-<<<<<<< HEAD
+
     <h1>welcome to my website!!</h1>
-=======
-    <h1 style="color:blue;">welcome to my website!</h1>
->>>>>>> 71078ae6aa68408a1be7b68069948bdbddea3325
+    <h1>welcome to my website!</h1>
+    
     <h2>Hello</h2>
     Hello World!
     
