--- a/hello.html
+++ b/hello.html
@@ -1,24 +1,12 @@
-ECHO is on.
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
-    <style>
-        h1{
-            color:blue;
-        }
-    </style>
 </head>
 <body>
-
-    <h1>welcome to my website!!</h1>
-    <h1>welcome to my website!</h1>
-    
-    <h2>Hello</h2>
-    Hello World!
+    <h1>Hello World</h1>
     
 </body>
 </html>
