--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
     <p>Hello html</p>
-    <h2>Hello Its me again, I'm playing with github</h2>
+    <h2 style: color="blue;">Hello Its me again, I'm playing with github</h2>
     
 </body>
 </html>
