haa frustrating, merging conflict

--- a/hello.html
+++ b/hello.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Hello World</h1>
     <p>Hello html</p>
-    <h2>Hello Its me again, I'm playing with github</h2>
-    <h3>Trying to use the merging conflicting thing</h3>
+    <h2>Hello Its me again, I'm playing with github!!</h2>
+    
     
 </body>
 </html>
